--- a/index-2.html
+++ b/index-2.html
@@ -61,11 +61,9 @@
 <h1 class="text-uppercase">I am Said Issaoui</h1>
 <h5 class="text-uppercase">Computer Engineer & Data Science Enthusiast</h5>
 <div class="social_icons my-5">
-<a href="#"><i class="ti-twitter"></i></a>
-<a href="#"><i class="ti-skype"></i></a>
-<a href="#"><i class="ti-instagram"></i></a>
-<a href="#"><i class="ti-dribbble"></i></a>
-<a href="#"><i class="ti-vimeo"></i></a>
+<a href="https://www.facebook.com/profile.php?id=100009247802836"><i class="ti-facebook"></i></a>
+<a href="https://www.linkedin.com/in/said-issaoui-55095315b/"><i class="ti-linkedin"></i></a>
+<a href="skype:said.issaoui34?call"><i class="ti-skype"></i></a>
 </div>
 <a class="primary_btn" href="blog.html"><span>See My Work</span></a>
 </div>
