--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="img/favicon.png" type="image/png">
-<title>Said Portfolio - Services</title>
+<title>Said Portfolio - Skills</title>
 
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="vendors/linericon/style.css">
