--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from preview.colorlib.com/theme/breed2/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jan 2021 20:17:32 GMT -->
+
 <head>
 
 <meta charset="utf-8">
@@ -10,7 +10,7 @@
 <title>Said Portfolio - Contact</title>
 
 <link rel="stylesheet" href="css/bootstrap.css">
-
+<link rel="stylesheet" href="vendors/linericon/style.css">
 <link rel="stylesheet" href="css/themify-icons.css">
 <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
 <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
@@ -194,5 +194,5 @@ Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728
 </script>
 </body>
 
-<!-- Mirrored from preview.colorlib.com/theme/breed2/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jan 2021 20:17:33 GMT -->
+
 </html>
