--- a/sortestPath.html
+++ b/sortestPath.html
@@ -52,7 +52,7 @@
 </header>
 
 
-<section class="banner_area">
+<section class="banner_area" background="common-banner">
 <div class="banner_inner d-flex align-items-center">
 <div class="container">
 <div class="banner_content text-center">
