--- a/sortestPath.html
+++ b/sortestPath.html
@@ -52,8 +52,8 @@
 </header>
 
 
-<section class="banner_area blog_area single-post-area " >
-<div class="banner_inner d-flex align-items-center">
+<section class="banner_area" >
+<div class="banner_inner d-flex align-items-center single-post-area section-margin">
 <div class="container">
 <div class="banner_content text-center">
 <h2>My Projects</h2>
