--- a/sortestPath.html
+++ b/sortestPath.html
@@ -53,7 +53,7 @@
 
 
 <section class="banner_area" >
-<div class="banner_inner d-flex align-items-center single-post-area section-margin">
+<div class="banner_inner d-flex align-items-center single-post-area">
 <div class="container">
 <div class="banner_content text-center">
 <h2>My Projects</h2>
