--- a/sortestPath.html
+++ b/sortestPath.html
@@ -52,24 +52,23 @@
 </header>
 
 
-<section class="banner_area" >
-<div class="banner_inner d-flex align-items-center single-post-area">
-<div class="container">
-<div class="banner_content text-center">
-<h2>My Projects</h2>
-<div class="page_link">
-<a href="index-2.html">Home</a>
-<a href="blog.html">Projects</a>
-</div>
-</div>
-</div>
-</div>
-</section>
+
  
 
-<section class="blog_area single-post-area section-margin">
-<div class="container">
-<div class="row">
+<section class="blog_area single-post-area  banner_area">
+  <div class="banner_inner d-flex align-items-center">
+    <div class="container">
+    <div class="banner_content text-center">
+    <h2>My Projects</h2>
+    <div class="page_link">
+    <a href="index-2.html">Home</a>
+    <a href="blog.html">Projects</a>
+    </div>
+    </div>
+    </div>
+    </div>
+<div class="container ">
+<div class="row section-margin">
 <div class="col-lg-8 posts-list">
 <div class="single-post">
 <div class="feature-img">
