--- a/sortestPath.html
+++ b/sortestPath.html
@@ -56,7 +56,7 @@
  
 
 <section class="blog_area single-post-area  banner_area">
-  <div class="banner_inner d-flex align-items-center">
+  <div class="d-flex align-items-center">
     <div class="container">
     <div class="banner_content text-center">
     <h2>My Projects</h2>
