--- a/sortestPath.html
+++ b/sortestPath.html
@@ -52,9 +52,9 @@
 </header>
 
 
-<section class="" >
-<div class="banner_inner ">
-<div class="container">
+<section class="banner_area" >
+<div class="banner_inner d-flex align-items-center single-post-area">
+<div class="container" >
 <div class="banner_content text-center">
 <h2>My Projects</h2>
 <div class="page_link">
