--- a/sortestPath.html
+++ b/sortestPath.html
@@ -52,8 +52,8 @@
 </header>
 
 
-<section class="banner_area" >
-<div class="banner_inner d-flex align-items-center single-post-area">
+<section class="banner_area banner_inner" >
+<div class="banner_inner  d-flex align-items-center single-post-area">
 <div class="container" >
 <div class="banner_content text-center">
 <h2>My Projects</h2>
