--- a/sortestPath.html
+++ b/sortestPath.html
@@ -6,6 +6,8 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
 <link rel="icon" href="img/favicon.png" type="image/png">
 <title>Said Portfolio - Project Details</title>
 
