--- a/sortestPath.html
+++ b/sortestPath.html
@@ -6,11 +6,12 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=9" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+<meta http-equiv="x-ua-compatible" content="IE=edge" >
 <link rel="icon" href="img/favicon.png" type="image/png">
 <title>Said Portfolio - Project Details</title>
 
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="vendors/linericon/style.css">
 <link rel="stylesheet" href="css/themify-icons.css">
@@ -20,7 +21,6 @@
 <link rel="stylesheet" href="css/magnific-popup.css">
 <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
 
-<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
