--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
 <div class="row footer_bottom justify-content-center">
 <p class="col-lg-8 col-sm-12 footer-text">
 
-Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i  aria-hidden="true"></i>  <a href="#" target="_blank"></a>
 </p>
 </div>
 </div>
